# soc-guardian-openenv

./: .dockerignore  .gitignore  Dockerfile  README.md  client.py  demo.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  simulator.py  smoke_test.py  tasks.py  validate-submission.sh
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: index.css
frontend/src/components/dashboard/: AlertStream.tsx  ArchitectureDiagram.tsx  DashboardCard.tsx  EpisodeSimulation.tsx  IdentityGate.tsx  MLModels.tsx  OpenEnvSpec.tsx  PPOAgent.tsx  RewardFunction.tsx  StatusIndicator.tsx
frontend/src/lib/: api.ts  simulation.ts
frontend/src/pages/: Index.tsx
graders/: __init__.py  graders.py  helpdesk_takeover.py  lateral_breach.py  privilege_spiral.py
server/: __init__.py  app.py  environment.py
soc_guardian_openenv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tasks/: __init__.py  helpdesk_takeover.py  lateral_breach.py  privilege_spiral.py  tasks.py
